--- a/tempcode/tempupdateflight.html
+++ b/tempcode/tempupdateflight.html
@@ -1,46 +1,43 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>User Details</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Profile</title>
+    <!-- Add Tailwind CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.1.2/tailwind.min.css">
 </head>
-<body class="bg-gray-200">
-	<div class="max-w-md mx-auto mt-8 bg-white shadow-lg rounded-lg overflow-hidden md:max-w-2xl">
-		<div class="md:flex">
-			<div class="md:flex-shrink-0">
-				<img class="h-48 w-full object-cover md:w-48" src="https://source.unsplash.com/random/400x400" alt="User Avatar">
-				<div class="mt-4">
-					<label for="profile-pic" class="cursor-pointer bg-gray-200 py-2 px-4 rounded-lg text-gray-800 font-medium hover:bg-gray-300">Change Profile Pic</label>
-					<input id="profile-pic" type="file" class="hidden">
-				</div>
-			</div>
-			<div class="p-4">
-				<div class="uppercase tracking-wide text-sm font-bold text-gray-700 mb-2">Username</div>
-				<div class="text-lg font-semibold text-gray-900 mb-2">John Doe</div>
-				<div class="text-gray-700 mb-2">
-					<div><span class="font-bold">Name:</span> John Doe</div>
-					<div><span class="font-bold">Email:</span> johndoe@example.com</div>
-					<div><span class="font-bold">Gender:</span> Male</div>
-				</div>
-				<div class="mt-4">
-					<label for="name" class="block text-gray-700 font-medium mb-2">Name:</label>
-					<input id="name" type="text" class="border rounded-lg py-2 px-4 w-full" value="John Doe">
-				</div>
-				<div class="mt-4">
-					<label for="email" class="block text-gray-700 font-medium mb-2">Email:</label>
-					<input id="email" type="email" class="border rounded-lg py-2 px-4 w-full" value="johndoe@example.com">
-				</div>
-				<div class="mt-4">
-					<label for="gender" class="block text-gray-700 font-medium mb-2">Gender:</label>
-					<select id="gender" class="border rounded-lg py-2 px-4 w-full">
-						<option value="male">Male</option>
-						<option value="female">Female</option>
-						<option value="other">Other</option>
-					</select>
-				</div>
-			</div>
-		</div>
-	</div>
-</body>
-</html>
+<body class="bg-gray-100">
+    <div class="max-w-md mx-auto my-8 bg-white shadow-lg rounded-lg overflow-hidden">
+        <!-- Profile image with shadow effect and round circle -->
+        <div class="flex items-center flex-col">
+          <img class="h-56  rounded-full  object-cover" src="https://picsum.photos/id/1018/400">
+          <button>Change Profile</button>
+        </div>
+        <!-- Profile information with input fields and change profile button -->
+        <div class="px-6 py-4">
+            <div class="mb-4">
+                <label class="block text-gray-700 font-bold mb-2" for="username">Username:</label>
+                <input disabled class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="username" type="text" placeholder="Username">
+            </div>
+            <div class="mb-4">
+                <label class="block text-gray-700 font-bold mb-2" for="first-name">First Name:</label>
+                <input disabled class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="first-name" type="text" placeholder="First Name">
+            </div>
+            <div class="mb-4">
+                <label class="block text-gray-700 font-bold mb-2" for="last-name">Last Name:</label>
+                <input disabled class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="last-name" type="text" placeholder="Last Name">
+            </div>
+            <div class="mb-4">
+                <label class="block text-gray-700 font-bold mb-2" for="email">Email:</label>
+                <input disabled class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="email" type="email" placeholder="Email">
+            </div>
+            <div class="flex items-center justify-end">
+                <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
+                    Back To Home
+                  </button>
+              </div>
+              </div>
+              </div>
+              </body>
+              
